# ENA

./: .gitignore  README.md
design_handoff/: design
design_handoff/prompt-enhacer/: README.md
design_handoff/prompt-enhacer/chats/: chat1.md
design_handoff/prompt-enhacer/project/: .thumbnail  ENA.html  bar.jsx  enhance.js  onboarding.jsx  styles.css
docs/: augment-context-engine.md  augment-prompt-enhancer.md
ena-app/: README.md  build-jsx.js
ena-app/scripts/: generate-awards.mjs
ena-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
ena-app/src-tauri/src/: engine.rs  main.rs
landing/: DESIGN.md  README.md  index.html  package-lock.json  package.json
landing/src/: App.tsx  index.css
landing/src/components/: Changelog.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Legal.tsx  Logos.tsx  Navbar.tsx  OrbLogo.tsx  WatchItWorkModal.tsx
