[package]
name = "ena"
version = "0.1.0"
description = "ENA — floating prompt enhancer"
authors = ["ENA"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["system-tray", "dialog-open", "macos-private-api", "global-shortcut-all", "window-all", "protocol-asset"] }
ignore = "0.4"
base64 = "0.22"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24"
objc = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
